# python-local-env-poetry

./: README.md  pyproject.toml
world_cup_stats/: insert_world_cup_stats.py  load_world_cup_players_stats_bigquery.py
world_cup_stats/files/: world_cup_players_stats_domain_ndjson.json  world_cup_players_stats_domain_with_errors_ndjson.json
